# research-dissertation-case-for-alt-ed

./: DISSERTATION.md  LICENSE  README.md  fall-cover-letter.md  fall-lit-review.md  glassdoor-georgetown-map.csv  loose-notes-archive.md  loose-notes.md  notes-from-reading-group
2019-spring-book-club/: 2019-spring-book-club-README.md  README.md
grants/: 190313-gmu-summer-grant.docx
jcv-plan-example/: jcv-degree-plan.csv  jcv-personalized-plan-example.md
lit-review/: fall-cover-letter.md  fall-lit-review.md
papers/: .gitignore  README.md
papers/alt-covid/: alt-covid.tex
papers/alt-ed-covid-2/: BibFile.bib  alt-ed-covid-2.docx  alt-ed-covid-2.tex  alt-ed-covid-2.txt
papers/alt-ed-covid-grit-ocean/: BibFile.bib  alt-ed-covid-grit-ocean.docx  alt-ed-covid-grit-ocean.tex  alt-ed-covid-grit-ocean.txt
papers/alt-ed-experiment/: BibFile.bib  alt-ed-experiment.md  alt-ed-experiment.tex
papers/alt-ed-gap-of-gaps/: todo.txt
papers/alt-ed-gender/: BibFile.bib  alt-ed-gender.docx  alt-ed-gender.tex  notes.txt
papers/alt-ed-matching-effects/: BibFile.bib  (+4 more)
papers/alt-ed-matching-effects-2/: BibFile.bib  alt-ed-matching-effects-2.tex  alt-ed-matching-effects-2.txt  alt-ed-matching-effects.tex  alt-ed-matching-effects.txt
papers/gpt-4-econ-productivity/data/: document_data.csv  expanded.csv  main.csv  main.md  make_expanded.py  make_figure_1.py  make_figure_3.py  make_table_1.py  make_table_2.py  make_table_2_regressions.py  make_table_3_regressions.py  phd_masters_chi.py  pyproject.toml  regressions.py  regressions_statsmodel.py  with_gpt.csv
(+393 files in other folders)
